--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -7,7 +7,7 @@ body {
   background: linear-gradient(
     rgba(0, 0, 0, 0.5),
     rgba(0, 0, 0, 0.5)
-  ), url('../images/roan.jpg') no-repeat center center fixed;
+  ), url('../images/roan2.jpg') no-repeat center center fixed;
   background-size: cover;
   margin: 0;
 }
