--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -4,12 +4,8 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 body {
-  background: linear-gradient(
-    rgba(0, 0, 0, 0),
-    rgba(0, 0, 0, 0)
-  ), url('../images/roan2-min.jpg') no-repeat center center fixed;
+  background: url('../images/roan2-min.jpg') no-repeat center fixed;
   background-size: cover;
-  margin: 0;
 }
 article,
 aside,
